build/log/idf_py_stdout_output_8548
Command: ninja app
[1/6] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-15.2.0_20251204\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v6.0.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IF:/test_can/Experiment/esp32s3_can_receiver/build/config -IF:/test_can/Experiment/esp32s3_can_receiver/main -IF:/.espressif/v6.0.2/esp-idf/components/esp_libc/platform_include -IF:/.espressif/v6.0.2/esp-idf/components/freertos/config/include -IF:/.espressif/v6.0.2/esp-idf/components/freertos/config/include/freertos -IF:/.espressif/v6.0.2/esp-idf/components/freertos/config/xtensa/include -IF:/.espressif/v6.0.2/esp-idf/components/freertos/FreeRTOS-Kernel/include -IF:/.espressif/v6.0.2/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IF:/.espressif/v6.0.2/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IF:/.espressif/v6.0.2/esp-idf/components/freertos/esp_additions/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hw_support/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hw_support/include/soc -IF:/.espressif/v6.0.2/esp-idf/components/esp_hw_support/ldo/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hw_support/debug_probe/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hw_support/etm/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hw_support/power_supply/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hw_support/modem/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IF:/.espressif/v6.0.2/esp-idf/components/esp_hw_support/port/esp32s3/. -IF:/.espressif/v6.0.2/esp-idf/components/esp_hw_support/port/esp32s3/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -IF:/.espressif/v6.0.2/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -IF:/.espressif/v6.0.2/esp-idf/components/heap/include -IF:/.espressif/v6.0.2/esp-idf/components/heap/tlsf -IF:/.espressif/v6.0.2/esp-idf/components/log/include -IF:/.espressif/v6.0.2/esp-idf/components/soc/include -IF:/.espressif/v6.0.2/esp-idf/components/soc/esp32s3 -IF:/.espressif/v6.0.2/esp-idf/components/soc/esp32s3/include -IF:/.espressif/v6.0.2/esp-idf/components/soc/esp32s3/register -IF:/.espressif/v6.0.2/esp-idf/components/hal/platform_port/include -IF:/.espressif/v6.0.2/esp-idf/components/hal/esp32s3/include -IF:/.espressif/v6.0.2/esp-idf/components/hal/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_rom/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_rom/esp32s3/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -IF:/.espressif/v6.0.2/esp-idf/components/esp_rom/esp32s3 -IF:/.espressif/v6.0.2/esp-idf/components/esp_common/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_system/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_system/port/soc -IF:/.espressif/v6.0.2/esp-idf/components/esp_system/port/include/private -IF:/.espressif/v6.0.2/esp-idf/components/esp_stdio/include -IF:/.espressif/v6.0.2/esp-idf/components/xtensa/esp32s3/include -IF:/.espressif/v6.0.2/esp-idf/components/xtensa/include -IF:/.espressif/v6.0.2/esp-idf/components/xtensa/deprecated_include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hal_gpio/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hal_gpio/esp32s3/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hal_usb/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hal_usb/esp32s3/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hal_pmu/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hal_pmu/esp32s3/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hal_ana_conv/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hal_ana_conv/esp32s3/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hal_dma/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hal_dma/esp32s3/include -IF:/.espressif/v6.0.2/esp-idf/components/lwip/include -IF:/.espressif/v6.0.2/esp-idf/components/lwip/include/apps -IF:/.espressif/v6.0.2/esp-idf/components/lwip/lwip/src/include -IF:/.espressif/v6.0.2/esp-idf/components/lwip/port/include -IF:/.espressif/v6.0.2/esp-idf/components/lwip/port/freertos/include -IF:/.espressif/v6.0.2/esp-idf/components/lwip/port/esp32xx/include -IF:/.espressif/v6.0.2/esp-idf/components/lwip/port/esp32xx/include/arch -IF:/.espressif/v6.0.2/esp-idf/components/lwip/port/esp32xx/include/sys -IF:/.espressif/v6.0.2/esp-idf/components/esp_wifi/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_wifi/include/local -IF:/.espressif/v6.0.2/esp-idf/components/esp_wifi/wifi_apps/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_event/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_phy/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_phy/esp32s3/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_netif/include -IF:/.espressif/v6.0.2/esp-idf/components/nvs_flash/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_partition/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_blockdev/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_timer/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_driver_gpio/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_driver_spi/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_pm/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hal_gpspi/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hal_gpspi/esp32s3/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_driver_dma/include -IF:/test_can/Experiment/esp32s3_can_receiver/managed_components/espressif__esp_twai_mcp2515/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_driver_twai/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hal_twai/include -IF:/.espressif/v6.0.2/esp-idf/components/esp_hal_twai/esp32s3/include @"F:/test_can/Experiment/esp32s3_can_receiver/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=F:/test_can/Experiment/esp32s3_can_receiver=. -fmacro-prefix-map=F:/.espressif/v6.0.2/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c F:/test_can/Experiment/esp32s3_can_receiver/main/main.c
F:/test_can/Experiment/esp32s3_can_receiver/main/main.c: In function 'print_and_send_task':
F:/test_can/Experiment/esp32s3_can_receiver/main/main.c:201:9: error: continue statement not within a loop
  201 |         continue;
      |         ^~~~~~~~
F:/test_can/Experiment/esp32s3_can_receiver/main/main.c:206:9: error: continue statement not within a loop
  206 |         continue;
      |         ^~~~~~~~
ninja: build stopped: subcommand failed.
